First pass at cleaning up search and category pages.
Former-commit-id: 1375a544139dcc09dedf667632c0c1d825eefa14
Former-commit-id: 0b64745e67e5beb6adfce91961fbf7e4bf216e84
Former-commit-id: ed58000a00c993f839e110628f84e95134f2393a
Former-commit-id: 734a6f911ba62ed5abba5495d2484dde823daabc
Former-commit-id: 3926d6d6506bd49379e9f6e24fe6c84d5412677d

--- a/src/podiobooks/templates/themes/tim1/main/index.html
+++ b/src/podiobooks/templates/themes/tim1/main/index.html
@@ -2,6 +2,8 @@
 {% load main_templatetags %}
 {% load title_templatetags %}
 
+{% block headtitle %}{{ site_name }} - Free Downloadable Audiobooks{% endblock %}
+
 {% block head %}
 <script type="text/javascript">
     dojo.require("pbwidgets.book_shelf.BookShelf");
