--- a/src/podiobooks/templates/themes/tim1/main/tags/show_shelf.html
+++ b/src/podiobooks/templates/themes/tim1/main/tags/show_shelf.html
@@ -1,4 +1,5 @@
 {% load title_templatetags %}<!-- Begin {{ shelf_title }} Shelf -->
+<!-- Windows Chrome Button Padding Fix -->
 <script type="text/javascript">
 dojo.addOnLoad(function() {
 	if (dojo.isChrome && (navigator.appVersion.indexOf("Win")!=-1)) {
