Made header logo clickable.
Former-commit-id: 0e08f46e4820dd65272b9977b54fcc17726d2915
Former-commit-id: fbeb4c8c7455a5373d49007901c85126d3aa4873
Former-commit-id: e55fa215b78882c8a3145c333b5770e58872cddd
Former-commit-id: 5eca26a5190599728e274fe5cf5afa3101964745
Former-commit-id: fbae01bc7611f25edfd09b616b434ac216d8d4f3
Former-commit-id: f90252c536a86b2a996616828c75c77ca6443170

--- a/src/podiobooks/templates/themes/tim1/main/category/detail.html
+++ b/src/podiobooks/templates/themes/tim1/main/category/detail.html
@@ -3,9 +3,19 @@
 {% block headtitle %}{{ category.name }} Category - {{ site_name }}{% endblock %}
 {% block content %}
 {% if category.title_set.all.count %}
-<div style="font-size: 24px; margin: 20px;">All Titles in {{ category.name }}</div>
+<div style="font-size: 24px; margin: 20px;">
+    All Titles in {{ category.name }}
+</div>
 {% show_titlelist category.title_set.all %}
+<!-- Script to change the category choice form to match the current category -->
+<script type="text/javascript">
+	dojo.addOnLoad (function() {
+		dojo.byId("id_category").value="{{ category.slug }}";
+	});
+</script>
 {% else %}
-<div style="font-size: 18px; margin: 20px;">There are currently no titles available in {{ category.name }}</div>
+<div style="font-size: 18px; margin: 20px;">
+    There are currently no titles available in {{ category.name }}
+</div>
 {% endif %}
 {% endblock %}
