--- a/src/podiobooks/templates/themes/tim1/header.html
+++ b/src/podiobooks/templates/themes/tim1/header.html
@@ -1,13 +1,14 @@
-{% load main_templatetags %}
-<!-- Header - Logo and Navigation Bar -->
+{% load main_templatetags %}<!-- Header - Logo and Navigation Bar -->
 <div id="header">
     <div id="pb-header-background">
+        <div id="pb-header-click-region" style="cursor: pointer; width: 600px; height: 120px; margin: 35px 0 0 210px" onclick="window.location('/');">
+        </div>
         <div id="pb-header-menubar">
             <a href="#">FAQ</a>
             | <a href="#">Authors</a>
             | <a href="#">Blog</a>
             | <a href="#">Community</a>
-			{% show_searchbox %}
+            {% show_searchbox %}
         </div>
     </div>
 </div>
