Changed shelf to pull from cover thumbnails.
Former-commit-id: 2b66989444273fae09754d435c237e5c0095dee2
Former-commit-id: e4931203d7a3c2283a1f50fb6730a719d8cb945e
Former-commit-id: 831910947a09407482f901935147914858a71605
Former-commit-id: 6ba3b191d338787b30237a5951dae799c2c542f2
Former-commit-id: 6c5fd710aeb2d78517d88a7dca6bd551c08b08d3
Former-commit-id: c020ade5a9460805e1b8acf41765d2ccf2207293

--- a/src/podiobooks/templates/themes/tim1/main/tags/show_shelf.html
+++ b/src/podiobooks/templates/themes/tim1/main/tags/show_shelf.html
@@ -24,7 +24,7 @@ dojo.addOnLoad(function() {
             <div dojoType="dijit.layout.ContentPane" showLabel="false" iconClass="pb-shelf-controller-icon" class="pb-shelf-pane" slideFrom="left" label="{{ shelf_title }}  Shelf,  Page 0">
                 {% endif %}
                 <div class="pb-shelf-item">
-                    <img class="pb-shelf-item-cover-image" src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" width="67" height="99" alt="Podiobook Cover for {{ title.name }}"/>
+                    <img class="pb-shelf-item-cover-image" src="{{ MEDIA_URL }}images/covers/67x99/{{ title.cover }}" width="67" height="99" alt="Podiobook Cover for {{ title.name }}"/>
                     <div class="pb-shelf-item-preview-icon" onclick="alert('Preview Placeholder');" alt="Click to Hear a Preview of {{ title.name }}.">
                     </div>
                     <div class="pb-shelf-item-text">
