Added ability to cycle through a list of hostnames for the covers.
Former-commit-id: 2ad9ca31efd961d3ccdf28b81b1d0f78c5bf1ef3
Former-commit-id: 7ea08d38e846841ad0904ad0a27c929a2329aff0
Former-commit-id: d473ec6c9653930f23cbea0ab5ea636d1e793a96
Former-commit-id: 9c2943cce358ae5094ad510e063428b8f1b6de32
Former-commit-id: 0d172e8f74d5cb8e551df72741244fe9b7983849

--- a/src/podiobooks/templates/themes/legacy/main/title/tags/show_titlecover.html
+++ b/src/podiobooks/templates/themes/legacy/main/title/tags/show_titlecover.html
@@ -1,4 +1,5 @@
+{% load main_templatetags %}
 {% if title %}
-<a href="{{ title.get_absolute_url }}"><img src="{{ COVER_MEDIA_URL }}images/covers/{{ title.cover }}" alt="Cover Image for '{{ title.name }}'" width="144" height="212"/></a>
+<a href="{{ title.get_absolute_url }}"><img src="{% cover_media_url %}images/covers/{{ title.cover }}" alt="Cover Image for '{{ title.name }}'" width="144" height="212"/></a>
 <span class="title-complete-notice">This podiobook is <span class="title-complete-notice-indicator">{% if title.is_complete %}complete{% else %}not complete{% endif %}</span></span>
 {% endif %}
