Added hyperlink to Category display.
Former-commit-id: d75cf55cd9f3290880737c25a53cfa979a1fa3a8
Former-commit-id: 6b1e4ce388c165232c59cc75dcc77234207c3258
Former-commit-id: 0ec07cab031edcdc3b825ea53e02e60db86e3aca
Former-commit-id: b849ef135e13b423d5ea0385c20df396cb343c7f
Former-commit-id: 45a648ef45388523b5acb2c5043eba652efe032a

--- a/src/podiobooks/templates/themes/tim1/main/title/tags/show_categories.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/tags/show_categories.html
@@ -2,7 +2,7 @@
 <!-- Begin show_categories templatetag -->
 	<span class="category-list">
 	{% for category in categories %}
-		{{ category.name }}{% if not forloop.last %},{% endif %}
+		<a href="{% url category_detail category.slug %}">{{ category.name }}</a>{% if not forloop.last %},{% endif %}
 	{% endfor %}
 	</span>
 <!-- End show_categories templatetag -->
