Added style to show loading icon for shelf items.
Former-commit-id: 95d080cf7280a6ff9c702d2366080b67385b66b5
Former-commit-id: 98e52ccb2adb083adbc7a4f7e310b571c859b154
Former-commit-id: c7b7551d4a43ef5c2a65ddc069b7c4596b1175fd
Former-commit-id: 38f7737f2bded4b5c040ffaf120993a909f22ea6
Former-commit-id: 48df7176ef0241bf7da1821e48327f778bdba654
Former-commit-id: a9278ee31afb47c3aa9c37a7fd7a4648e3f37115

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -212,6 +212,15 @@
 	font-size: 10px;
 }
 
+.pb-shelf-item .dijitContentPaneLoading {
+	background: url(../images/loading.gif) no-repeat;
+	height: 35px;
+	width: 35px;
+	margin: 62px 0 0 90px;
+	color: transparent;
+	display: block;
+}
+
 .pb-feature-shelf {
 	position: relative;
 	height: 230px;
