Added Contributor List/Detail screens.
Former-commit-id: fbd6471d556850c16558176c6d2c9d5ebfc77fa0
Former-commit-id: 69432d904bb80b6d1b1c6db023f4eaf35b1a7d16
Former-commit-id: 245da69f176aeebdd77007792f154eab4d38a711
Former-commit-id: a5032b9c85472ba9c9e2dfd916bd1c7a1ff5d1c0
Former-commit-id: baba18e695e39ae6f6890d6d20463699007758cc

--- a/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
@@ -5,13 +5,13 @@
 </div>
 <div class="pb-shelf-item-text">
     <p class="pb-shelf-item-title">
-        {{ title.name|truncatewords_html:8 }}
+        <a href="{% url title_detail title.slug %}" style="text-decoration:none;">{{ title.name|truncatewords_html:8 }}</a>
     </p>
     <p class="pb-shelf-item-contributors">
         {% show_contributors title %}
     </p>
     <p class="pb-shelf-item-categories">
-        in <span style="color: #0054a6">{% show_categories title %}</span>
+        in {% show_categories title %}
     </p>
     <p class="pb-shelf-item-tags">
         {% autoescape off %}{{ title.description|striptags|truncatewords_html:15 }}{% endautoescape %}
