--- a/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
@@ -1,6 +1,6 @@
 {% load main_templatetags %}
 {% load title_templatetags %}
-<img class="pb-shelf-item-cover-image" src="{% cover_media_url %}images/covers/67x99/{{ title.cover }}" width="67" height="99" alt="Podiobook Cover for {{ title.name }}"/>
+<a href="{% url title_detail title.slug %}"><img class="pb-shelf-item-cover-image" src="{% cover_media_url %}images/covers/67x99/{{ title.cover }}" width="67" height="99" alt="Podiobook Cover for {{ title.name }}"/></a>
 <div class="pb-shelf-item-preview-icon" onclick="alert('Preview Placeholder');" alt="Click to Hear a Preview of {{ title.name }}.">
 </div>
 <div class="pb-shelf-item-text">
