--- a/src/podiobooks/templates/themes/tim1/main/title/detail.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail.html
@@ -1,62 +1,76 @@
 {% extends "base.html" %}
 {% load main_templatetags %}
 {% load title_templatetags %}
-
 {% block headtitle %}{{ title.name }} - {{ site_name }}{% endblock %}
-
 {% block title %}Book Information{% endblock %}
-
 {% block content %}
-<div id="books">
-<ul>
-<li>
-<table>
-	<tr>
-		<td align="center" width="144">
-			<div align="center">
-				{% show_titlecover title %}
-			</div>
-		</td>
-		<td><span class="booktitle">{{ title.name }}</span>
-			<span class="subtitle">
-				{% show_contributors title %}
-				<br/>
-				{% show_categories title %}
-			</span>
-			<br/>
-			<br/>
-			<p>{% autoescape off %}{{ title.description }}{% endautoescape %}</p>
-			<br />
-			{% if title.license %}
-				<a rel="license" href="{{title.license.url}}"><img alt="{{ title.license.text }} Logo" style="border-width:0" src="{{title.license.image_url}}" /></a>
-        		<br /> 
-				This work is licensed under a <a href="{{title.license.url}}">{{ title.license.text }}</a> license.
-			{% endif %}
-		</td>
-	</tr>
-</table>
-</li>
-</ul>
+<div class="title-detail" style="margin-top: 30px;">
+    <div style="float:left;font-size: 10px; text-align: center">
+        {% show_titlecover title %}
+    </div>
+    <div style="float:left; width: 750px; margin: 0px 0px 20px 20px">
+        <div style="font-size: 18px; font-weight: bold;">
+            {{ title.name }}
+        </div>
+        {% show_contributors title %}
+        <br>
+        {% show_categories title %}
+        <br>
+        <p style="margin: 20px 0px 0px 0px">
+            {% autoescape off %}{{ title.description }}{% endautoescape %}
+        </p>
+        <br>
+        {% if title.license %}
+        <div style="float: left; margin: 20px 0px 0px 0px; vertical-align: middle;">
+            <a rel="license" href="{{title.license.url}}"><img alt="{{ title.license.text }} Logo" style="border-width:0" src="{{title.license.image_url}}" /></a>
+        </div>
+        <div style="float: left; margin: 19px 0px 0px 10px; width: 650px;  vertical-align: middle;">
+            This work is licensed under a <a href="{{title.license.url}}">{{ title.license.text }}</a>
+            license.
+        </div>
+        {% endif %}
+    </div>
+</div>
 {% if title.episode_set.all %}
-{% show_heading "Chapters" %}
-<br clear=all />
-<table class="table" cellpadding="0" border="0" cellspacing="0" align="center"> 
-			<colgroup> 
-				<col width="250"></col> 
-				<col width="520"></col> 
-			</colgroup>	
-<tr class="tableheader"> 
-<!--td nowrap>#</td--> 
-	<td>Title</td> 
-	<td>Description</td> 
-	<td>Date Created</td> 
-</tr>
-{% for episode in title.episode_set.all %}
-<tr class="{% cycle 'oddrow' 'evenrow' %}" valign="top"><td><a href="{{ episode.url }}">{{ episode.name }}</a><br/><span style="font-size: 8pt">({{ episode.filesize|filesizeformat }}	MB)</span></td><td>{{ episode.description }}</td><td nowrap >{{ episode.date_updated|date:"d-M-Y" }}</td></tr>
-{% endfor %}
-</table>
+<div style="font-size: 18px; clear: both; margin: 20px 0 0 20px; font-weight: bold;">
+    Chapters
+</div>
+<div style="clear: both; margin: 30px;">
+</div>
+<div>
+    <div style="font-weight: bold;">
+        <div style="float:left; width:90px">
+            Title
+        </div>
+        <div style="float:left; width:600px; margin-left: 10px;">
+            Description
+        </div>
+        <div style="float:left; width:150px; margin-left: 10px;">
+            Date Created
+        </div>
+    </div>
+    <div style="clear:both;">
+    </div>
+    {% for episode in title.episode_set.all %}
+    <div style="margin-top: 15px;">
+        <div style="float:left; width:90px; text-align: center;">
+            <a href="{{ episode.url }}">{{ episode.name }}</a>
+            <br/>
+            <span style="font-size: 8pt;">({{ episode.filesize|filesizeformat }}	MB)</span>
+        </div>
+        <div style="float:left; width:600px; margin-left: 10px;">
+            {{ episode.description }}
+        </div>
+        <div style="float:left; width:150px; margin-left: 10px;">
+            {{ episode.date_updated|date:"d-M-Y" }}
+        </div>
+    </div>
+    <div style="clear:both;">
+    </div>
+    {% endfor %}
+</div>
 {% endif %}
-
-<p><a href="{% url title_list %}">Back to Title List</a> | <a href="{% url home_page %}">Back to Home Page</a> </p>
+</div>
+<div style="clear:both;">
 </div>
 {% endblock %}
