size align issue fixed.
Former-commit-id: 6fa2c6e78e940d26d442a7b3e0085553dd35fc60
Former-commit-id: 8a50298c75e7bd6a77f0a8b798c8719074724eed
Former-commit-id: a21077659ff2acab19f577358031d7d1c440697c
Former-commit-id: 384ce64c1ffc16bcca0714a31c1d10acda464bf2
Former-commit-id: 9555d806d5f7563aa1d50f71d00236806633f1cd
Former-commit-id: 5193587316961ff6e860fc4c6780692e0f8f340a

--- a/src/podiobooks/templates/themes/tim1/main/title/detail.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail.html
@@ -53,10 +53,9 @@
     </div>
     {% for episode in title.episode_set.all %}
     <div style="margin-top: 15px;">
-        <div style="float:left; width:90px; text-align: center;">
+        <div style="float:left; width:150px;">
             <a href="{{ episode.url }}">{{ episode.name }}</a>
-            <br/>
-            <span style="font-size: 8pt;">({{ episode.filesize|filesizeformat }}	MB)</span>
+            <div style="margin: 5px 0 0 10px; text-align: center; font-size: 10px">({{ episode.filesize|filesizeformat }}	MB)</div>
         </div>
         <div style="float:left; width:600px; margin-left: 10px;">
             {{ episode.description }}
