--- a/src/podiobooks/templates/themes/tim1/header.html
+++ b/src/podiobooks/templates/themes/tim1/header.html
@@ -4,10 +4,10 @@
         <div id="pb-header-click-region" style="cursor: pointer; width: 600px; height: 120px; margin: 35px 0 0 210px" onclick="document.location.href = ('/')">
         </div>
         <div id="pb-header-menubar">
-            <a href="#">FAQ</a>
-            | <a href="#">Authors</a>
-            | <a href="#">Blog</a>
-            | <a href="#">Community</a>
+            <a href="http://podiobooks.com/about.php">FAQ</a>
+            | <a href="http://www.podiobooks.com/authors.php">Authors</a>
+            | <a href="http://www.podiobooks.com/blog">Blog</a>
+            | <a href="http://community.podiobooks.com/">Community</a>
             {% show_searchbox %}
         </div>
     </div>
