--- a/src/podiobooks/templates/themes/tim1/base.html
+++ b/src/podiobooks/templates/themes/tim1/base.html
@@ -30,7 +30,8 @@
       parseOnLoad: true,
       isDebug: isDebug,
       baseUrl: "/",
-      modulePaths: { pbwidgets: "{{ MEDIA_URL }}js/pbwidgets" }
+      modulePaths: { pbwidgets: "{{ MEDIA_URL }}js/pbwidgets" },
+	  preloadImages:["{{ THEME_MEDIA_URL }}images/loading.gif",]
     };
 </script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js">
