spacing fix for very short descriptions.  Changed link to be only text.
Former-commit-id: b25a34e250623e2b02aef9592b62fc9dd345e9f6
Former-commit-id: a7a8838eb68824309733c88648edb95fcf41591b
Former-commit-id: 68a3d85e76701341f04b9e9587a33f0a6ce5666e
Former-commit-id: c5601de1ca1569d00c399b1dc8869caf7cc57728
Former-commit-id: e6de6b362eae1d9559c11d0ca88543cc6c92da7f

--- a/src/podiobooks/templates/themes/tim1/main/title/detail.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail.html
@@ -7,8 +7,8 @@
 <div class="title-detail" style="margin: 0 0 30px 0;">
     <div style="float:left;font-size: 10px; text-align: center">
         {% show_titlecover title %}
-		<div style="margin: 10px 0 0 0">
-			<a href="/rss/feeds/episodes/{{ title.slug }}"><img src="{{ THEME_MEDIA_URL }}images/pb-rss-icon.gif">Subscribe now</a>
+		<div style="margin: 10px 0 25px 0">
+			<img src="{{ THEME_MEDIA_URL }}images/pb-rss-icon.gif"><a href="/rss/feeds/episodes/{{ title.slug }}">Subscribe now</a>
 		</div>
     </div>
     <div style="float:left; width: 750px; margin: 0px 0px 20px 20px">
