--- a/src/podiobooks/templates/themes/tim1/base.html
+++ b/src/podiobooks/templates/themes/tim1/base.html
@@ -38,7 +38,7 @@
 </script>
 {% block head %}{% endblock %}
 </head>
-<body {% block bodyid %}{% endblock %}{% block bodyclass %}class="pb-body"{% endblock %}">
+<body>
 {% block header %}{% include "header.html" %}{% endblock %}
 {% block contentdivopen %}<div id="content">{% endblock %}
 {% block content %}No Content Defined{% endblock %}
