--- a/src/podiobooks/templates/themes/tim1/header.html
+++ b/src/podiobooks/templates/themes/tim1/header.html
@@ -1,7 +1,7 @@
 {% load main_templatetags %}<!-- Header - Logo and Navigation Bar -->
 <div id="header">
     <div id="pb-header-background">
-        <div id="pb-header-click-region" style="cursor: pointer; width: 600px; height: 120px; margin: 35px 0 0 210px" onclick="document.location.href = ('/')">
+        <div id="pb-header-click-region" onclick="document.location.href = ('/')">
         </div>
         <div id="pb-header-menubar">
             <a href="http://podiobooks.com/about.php">FAQ</a>
