--- a/src/podiobooks/templates/themes/tim1/main/category/list.html
+++ b/src/podiobooks/templates/themes/tim1/main/category/list.html
@@ -3,8 +3,10 @@
 {% block headtitle %}All Categories - {{ site_name }}{% endblock %}
 
 {% block content %}
-<div class="categories">
-<ul>
+<h1>
+	All Categories
+</h1>
+<ul style="margin: 0 0 0 40px">
   {% for category in category_list %} 
   <li class="category_{{category.slug}}"><a href="{{category.get_absolute_url}}">{{ category.name }}</a> - {{ category.title_set.all.count }} titles</li>
   {% endfor %}
