--- a/src/podiobooks/templates/themes/tim1/header.html
+++ b/src/podiobooks/templates/themes/tim1/header.html
@@ -4,10 +4,12 @@
         <div id="pb-header-click-region" onclick="document.location.href = ('/')">
         </div>
         <div id="pb-header-menubar">
-            <a href="http://podiobooks.com/about.php">FAQ</a>
-            | <a href="http://www.podiobooks.com/authors.php">Authors</a>
-            | <a href="http://www.podiobooks.com/blog">Blog</a>
-            | <a href="http://community.podiobooks.com/">Community</a>
+            <div id="pb-header-menubar-items">
+                <a href="http://podiobooks.com/about.php">FAQ</a>
+                | <a href="http://www.podiobooks.com/authors.php">Authors</a>
+                | <a href="http://www.podiobooks.com/blog">Blog</a>
+                | <a href="http://community.podiobooks.com/">Community</a>
+            </div>
             {% show_searchbox %}
         </div>
     </div>
