Changed loading message to the spinning graphic.
Former-commit-id: fd55993491d76b0954a9c989997e0946b69c545b
Former-commit-id: 3bcdd3544cd32337a3e0c4a27f4e22f5e60344bf
Former-commit-id: b96fc4f6e2247f090d30252849db1441d338432d
Former-commit-id: 54a950220e978262171bcce0667e2a83b3de27af
Former-commit-id: df7941e7a195664942452f5a502590559efd5867
Former-commit-id: 04cd150c9b2c338a85b2e1f6c021a3a648f5b126

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -170,6 +170,15 @@ ul {
 	clear: both;
 }
 
+.pb-shelf-container .dijitContentPaneLoading {
+	background: url(../images/loading.gif) no-repeat;
+	height: 35px;
+	width: 35px;
+	margin: 62px 0 0 90px;
+	color: transparent;
+	display: block;
+}
+
 .pb-shelf-pane {
 	position: absolute;
 	height: 164px;
