--- a/src/podiobooks/templates/themes/tim1/main/tags/show_shelf.html
+++ b/src/podiobooks/templates/themes/tim1/main/tags/show_shelf.html
@@ -29,7 +29,7 @@
 			{% endif %}
             <span class="pb-shelf-controller" dojoType="dijit.layout.StackController" containerId="{{ shelf_id }}" buttonWidget="pbwidgets.book_shelf._StackButton"></span>
         </div>
-        <div dojoType="dijit.layout.ContentPane" id="{{ shelf_id }}Container">
+        <div dojoType="dijit.layout.ContentPane" id="{{ shelf_id }}Container" class="pb-shelf-container">
             {% show_shelf_items shelf_id title_list shelf_title_width %}
         </div>
     </div>
